updated NYTS proj & cover photo

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                     <div class="col-md-4">
-                        <img src="./assets/flower.jpg" class="card-img" alt="flowers" height: 300px;
+                        <img src="./assets/grad.JPG" class="card-img" alt="flowers";
                         width: 200px;>
                     </div>
                     <div class="col-md-8">
