--- a/portfolio.html
+++ b/portfolio.html
@@ -1,118 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <title>Portfolio</title>
-  </head>
-  <body>
-    <div class="container1">
-      <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand" href="#">Sophia Orlando</a>
-        <div class="nav-options" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="index.html"
-                >About <span class="sr-only">(current)</span></a
-              >
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="portfolio.html"
-                >Portfolio <span class="sr-only">(current)</span></a
-              >
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="contact.html"
-                >Contact <span class="sr-only">(current)</span></a
-              >
-            </li>
-          </ul>
-        </div>
-      </nav>
-    </div>
 
-    <div class="container">
-      <div class="row">
-        <div class="col">
-          <h1>Portfolio</h1>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+  <link rel="stylesheet" href="style.css" />
+  <script src="script.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+    crossorigin="anonymous"></script>
+
+  <title>Portfolio</title>
+</head>
+
+<body>
+  <div class="container1">
+    <nav class="navbar navbar-expand-lg">
+      <a class="navbar-brand" href="#">Sophia Orlando</a>
+      <div class="nav-options" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="portfolio.html">Portfolio <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="contact.html">Contact <span class="sr-only">(current)</span></a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <h1>Portfolio</h1>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-12 col-md-6 col-lg-3">
+        <div class="card bg-dark text-white">
+          <img src="./assets/NYTS.png" class="card-img" alt="stacked books" id = "NYTSimg" />
+          <!-- <div class="card-img-overlay">
+              <h5 class="card-title">NYTS Article Search</h5>
+            </div> -->
         </div>
       </div>
-      <div class="row">
-        <div class="col-sm-12 col-md-6 col-lg-3">
-          <div class="card bg-dark text-white">
-            <img
-              src="./assets/books.jpg"
-              class="card-img"
-              alt="stacked books"
-            />
-            <div class="card-img-overlay">
-              <h5 class="card-title">Project</h5>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-12 col-md-6 col-lg-3">
-          <div class="card bg-dark text-white">
-            <img
-              src="./assets/books.jpg"
-              class="card-img"
-              alt="stacked books"
-            />
-            <div class="card-img-overlay">
-              <h5 class="card-title">Project</h5>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-12 col-md-6 col-lg-3">
-          <div class="card bg-dark text-white">
-            <img
-              src="./assets/books.jpg"
-              class="card-img"
-              alt="stacked books"
-            />
-            <div class="card-img-overlay">
-              <h5 class="card-title">Project</h5>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-12 col-md-6 col-lg-3">
-          <div class="card bg-dark text-white">
-            <img
-              src="./assets/books.jpg"
-              class="card-img"
-              alt="stacked books"
-            />
-            <div class="card-img-overlay">
-              <h5 class="card-title">Project</h5>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-12 col-md-6 col-lg-3">
-          <div class="card bg-dark text-white">
-            <img
-              src="./assets/books.jpg"
-              class="card-img"
-              alt="stacked books"
-            />
-            <div class="card-img-overlay">
-              <h5 class="card-title">Project</h5>
-            </div>
+      <div class="col-sm-12 col-md-6 col-lg-3">
+        <div class="card bg-dark text-white">
+          <img src="./assets/books.jpg" class="card-img" alt="stacked books" />
+          <div class="card-img-overlay">
+            <h5 class="card-title">Project</h5>
           </div>
         </div>
       </div>
     </div>
-    <footer>
-      <h3>Copyright</h3>
-    </footer>
-  </body>
+    <div class="row">
+      <div class="col-sm-12 col-md-6 col-lg-3">
+        <div class="card bg-dark text-white">
+          <img src="./assets/books.jpg" class="card-img" alt="stacked books" />
+          <div class="card-img-overlay">
+            <h5 class="card-title">Project</h5>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-6 col-lg-3">
+        <div class="card bg-dark text-white">
+          <img src="./assets/books.jpg" class="card-img" alt="stacked books" />
+          <div class="card-img-overlay">
+            <h5 class="card-title">Project</h5>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-12 col-md-6 col-lg-3">
+        <div class="card bg-dark text-white">
+          <img src="./assets/books.jpg" class="card-img" alt="stacked books" />
+          <div class="card-img-overlay">
+            <h5 class="card-title">Project</h5>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <footer>
+    <h3>Copyright</h3>
+  </footer>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+    crossorigin="anonymous"></script>
+  <script type="text/javascript">
+
+
+    $(document).ready(function () {
+
+      $("#NYTSimg").on("click", function () {
+        const url = "https://sophiaorlando.github.io/New-York-Times-Article-Search/"
+        window.open(url)
+      })
+
+
+
+
+    })
+
+  </script>
+
+</body>
+
 </html>
