--- a/index.html
+++ b/index.html
@@ -1,67 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css">
     <title>About Me</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand" href="#">Sophia Orlando</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
         </button>
-      
+
         <div id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="portfolio.html">Portfolio <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="contact.html">Contact <span class="sr-only">(current)</span></a>
-            </li>
-        </ul>
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="portfolio.html">Portfolio <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="contact.html">Contact <span class="sr-only">(current)</span></a>
+                </li>
+            </ul>
     </nav>
 
     <div class="container">
         <div class="row">
             <div class="col">
-                <h1> About Me</h1>
+                <h1> Sophia Orlando</h1>
+                <h3>New York</h3>
             </div>
         </div>
+    </div>
 
-        <div class="row ">
-            <div class="card mb-3" style="max-width: 540px;">
+    <div class="container">
+        <h2>About Me</h2>
+        <p class="card-text">
+            Hi! My name is Sophia Orlando.
+            I graduated from the University of Arizona.
+            I am currently enrolled in UCLA Extension Full Stack Coding Bootcamp. In my freetime, I
+            like reading
+            and hanging out with my family. I also enjoy watching Netflix and working out.
+        </p>
+        <div class="row">
+            <h2 class="col-12">Education</h2>
+            <div class="col-6">
+                <p>UCLA Extension Coding Bootcamp</p>
+                <p>Full Stack Web Development</p>
+            </div>
+            <div class="col-6">
+                <p>University of Arizona</p>
+                <p>B.A. Information Science & eSociety</p>
+            </div>
+
+            <h2 class="col-12">Skills</h2>
+            <div class="col-12">
+                <ul class="list-group list-group-horizontal">
+                    <li class="list-group-item">HTML</li>
+                    <li class="list-group-item">CSS</li>
+                    <li class="list-group-item">Javascript</li>
+                    <li class="list-group-item">jQuery</li>
+                    <li class="list-group-item">Bootstrap</li>
+                    <li class="list-group-item">Foundation</li>
+                    <li class="list-group-item">Responsive Design</li>
+                    <li class="list-group-item">Node.js</li>
+                    <li class="list-group-item">AJAX</li>
+                    <li class="list-group-item">ES6</li>
+            </div>
+            <div class="col-12">
+                <ul class="list-group list-group-horizontal">
+                    <li class="list-group-item">skill</li>
+                    <li class="list-group-item">skill</li>
+                    <li class="list-group-item">skill</li>
+            </div>
+            <h2 class="col-12">Projects</h2>
+            <div class="card mb-3">
                 <div class="row no-gutters">
                     <div class="col-md-4">
-                        <img src="./assets/grad.JPG" class="card-img" alt="flowers";
-                        width: 200px;>
+                        <img src="./assets/NYTS.png" class="card-img" alt="...">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
-                            <p class="card-text">Hi! My name is Sophia Orlando. 
-                                 I graduated from the University of Arizona. 
-                                 I am currently enrolled in UCLA Extension Full Stack Coding Bootcamp. In my freetime, I like reading 
-                                 and hanging out with my family. I also enjoy watching Netflix and working out.</p>
-                            </div>
+                            <h5 class="card-title">The New York Times Article Search</h5>
+                            <p class="card-text"><small class="text-muted">jQuery <span></span> AJAX <span></span> CSS
+                                    <span></span> Bootstrap </small></p>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                            <a class="btn btn-dark"
+                                href="https://github.com/sophiaorlando/New-York-Times-Article-Search" target="_blank"
+                                role="button">
+                                <input type="image"
+                                    src="./assets/gitlogo.png" style="width:20px;height:20px;"/> GitHub</a>
+                                    <a class="btn btn-dark"
+                                href="https://github.com/sophiaorlando/New-York-Times-Article-Search" target="_blank"
+                                role="button">
+                                <input type="image"
+                                    src="./assets/2uparrow.png" style="width:20px;height:20px;"/> Preview</a>
+
                         </div>
                     </div>
                 </div>
             </div>
+            <div class="card mb-3">
+                <div class="row no-gutters">
+                    <div class="col-md-4">
+                        <img src="./assets/NYTS.png" class="card-img" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">The New York Times Article Search</h5>
+                            <p class="card-text"><small class="text-muted">jQuery <span></span> AJAX <span></span> CSS
+                                    <span></span> Bootstrap </small></p>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                            <a class="btn btn-dark"
+                                href="https://github.com/sophiaorlando/New-York-Times-Article-Search" target="_blank"
+                                role="button">
+                                <input type="image"
+                                    src="./assets/gitlogo.png" style="width:20px;height:20px;"/> GitHub</a>
+                                    <a class="btn btn-dark"
+                                href="https://github.com/sophiaorlando/New-York-Times-Article-Search" target="_blank"
+                                role="button">
+                                <input type="image"
+                                    src="./assets/2uparrow.png" style="width:20px;height:20px;"/> Preview</a>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
-<footer>
-  <h3>Copyright</h3>
-</footer>
+    <footer>
+        <h3>Copyright</h3>
+    </footer>
 </body>
+
 </html>
