--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                 <input type="image"
                                     src="./assets/gitlogo.png" style="width:20px;height:20px;"/> GitHub</a>
                                     <a class="btn btn-dark"
-                                href="https://github.com/sophiaorlando/New-York-Times-Article-Search" target="_blank"
+                                href="https://sophiaorlando.github.io/New-York-Times-Article-Search/" target="_blank"
                                 role="button">
                                 <input type="image"
                                     src="./assets/2uparrow.png" style="width:20px;height:20px;"/> Preview</a>
@@ -111,22 +111,49 @@
             <div class="card mb-3">
                 <div class="row no-gutters">
                     <div class="col-md-4">
-                        <img src="./assets/NYTS.png" class="card-img" alt="...">
+                        <img src="./assets/visitorCenterImg.png" class="card-img" alt="...">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
-                            <h5 class="card-title">The New York Times Article Search</h5>
-                            <p class="card-text"><small class="text-muted">jQuery <span></span> AJAX <span></span> CSS
-                                    <span></span> Bootstrap </small></p>
+                            <h5 class="card-title">Visitor Center Search in the U.S.A.</h5>
+                            <p class="card-text"><small class="text-muted">Handlebars <span></span> Javascript <span></span> CSS
+                                    <span></span> </small></p>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                                 additional content. This content is a little bit longer.</p>
                             <a class="btn btn-dark"
-                                href="https://github.com/sophiaorlando/New-York-Times-Article-Search" target="_blank"
+                                href="https://github.com/sophiaorlando/State-Visitor-Centers" target="_blank"
                                 role="button">
                                 <input type="image"
                                     src="./assets/gitlogo.png" style="width:20px;height:20px;"/> GitHub</a>
                                     <a class="btn btn-dark"
-                                href="https://github.com/sophiaorlando/New-York-Times-Article-Search" target="_blank"
+                                href="https://young-shore-67722.herokuapp.com/" target="_blank"
+                                role="button">
+                                <input type="image"
+                                    src="./assets/2uparrow.png" style="width:20px;height:20px;"/> Preview</a>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card mb-3">
+                <div class="row no-gutters">
+                    <div class="col-md-4">
+                        <img src="./assets/beachImg.png" class="card-img" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">California Coastal Beach Cleanups</h5>
+                            <p class="card-text"><small class="text-muted">Javascript <span></span> Sequilize <span></span> Moment.js
+                                    <span></span> </small></p>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                            <a class="btn btn-dark"
+                                href="https://github.com/sophiaorlando/Project2" target="_blank"
+                                role="button">
+                                <input type="image"
+                                    src="./assets/gitlogo.png" style="width:20px;height:20px;"/> GitHub</a>
+                                    <a class="btn btn-dark"
+                                href="https://thawing-temple-82462.herokuapp.com/" target="_blank"
                                 role="button">
                                 <input type="image"
                                     src="./assets/2uparrow.png" style="width:20px;height:20px;"/> Preview</a>
