--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         <div class="card-body">
                             <h5 class="card-title">The New York Times Article Search</h5>
                             <p class="card-text"><small class="text-muted">jQuery <span></span> AJAX <span></span> CSS
-                                    <span></span> Bootstrap </small></p>
+                                    <span></span> Bootstrap <span></span></small></p>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                                 additional content. This content is a little bit longer.</p>
                             <a class="btn btn-dark"
@@ -116,8 +116,8 @@
                     <div class="col-md-8">
                         <div class="card-body">
                             <h5 class="card-title">Visitor Center Search in the U.S.A.</h5>
-                            <p class="card-text"><small class="text-muted">Handlebars <span></span> Javascript <span></span> CSS
-                                    <span></span> </small></p>
+                            <p class="card-text"><small class="text-muted">Handlebars <span></span> Javascript <span></span> MySQL<span></span>CSS
+                                    <span></span>API<span></span>  </small></p>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                                 additional content. This content is a little bit longer.</p>
                             <a class="btn btn-dark"
@@ -143,8 +143,8 @@
                     <div class="col-md-8">
                         <div class="card-body">
                             <h5 class="card-title">California Coastal Beach Cleanups</h5>
-                            <p class="card-text"><small class="text-muted">Javascript <span></span> Sequilize <span></span> Moment.js
-                                    <span></span> </small></p>
+                            <p class="card-text"><small class="text-muted">Javascript <span></span><span></span> MySQL<span></span>  Sequilize <span></span> Moment.js<span></span> 
+                                    <span>Node.js</span>Express<span></span> API<span></span>  </small></p>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                                 additional content. This content is a little bit longer.</p>
                             <a class="btn btn-dark"
