--- a/index.html
+++ b/index.html
@@ -12,57 +12,57 @@
 
 <body>
     <nav class="navbar navbar-expand-lg">
+        <a class="navbar-brand navButt" href="index.html">Back to me!</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
         </button>
-
+    
         <div id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="portfolio.html">Portfolio <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="contact.html">Contact <span class="sr-only">(current)</span></a>
-                </li>
-            </ul>
-    </nav>
-
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <h1> Sophia Orlando</h1>
-                <h3>New York</h3>
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link navButt" href="contact.html">Contact <span class="sr-only">(current)</span></a>
+            </li>
+          </ul>
+      </nav>
+   
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container text-center">
+                <h1 class="display-1">Full Stack Web Developer</h1>
+                <h3 class="display-4">Greater New York Area</h3>
+                <h4 class="display-5"> if (sad() === true) {</br>
+                    sad().stop();</br>
+                    beAwesome();</br>
+                    } </h4>
             </div>
         </div>
-    </div>
+        <div class="jumbotron text-center intro">
+            <h1 class="display-4">Hello, I'm Sophia!</h1>
+            <h2 class="lead">Contemplating my next move post-college, I decided to deep dive into the mysterious sea of
+                coding. The first time I had seen the words,
+                "Hello, World!", pop up on my computer screen, I haven't looked back. Take a look at my skills and some
+                of my most recent projects.
+            </h2>
+            <hr class="my-4">
+            <a class="btn btn-primary btn-lg" href="#" role="button">Print Resume</a>
+        </div>
+        <!-- <div class="row">
+                <h2 class="col-12">Education</h2>
+                <div class="col-6">
+                    <p>UCLA Extension Coding Bootcamp</p>
+                    <p>Full Stack Web Development</p>
+                </div>
+                <div class="col-6">
+                    <p>University of Arizona</p>
+                    <p>B.A. Information Science & eSociety</p>
+                </div> -->
+                <div class="main">
+        <div class="skills">
+            <h2 class="col-12 text-center display-5 headers skillsHead">Skills</h2>
 
-    <div class="container">
-        <h2>About Me</h2>
-        <p class="card-text">
-            Hi! My name is Sophia Orlando.
-            I graduated from the University of Arizona.
-            I am currently enrolled in UCLA Extension Full Stack Coding Bootcamp. In my freetime, I
-            like reading
-            and hanging out with my family. I also enjoy watching Netflix and working out.
-        </p>
-        <div class="row">
-            <h2 class="col-12">Education</h2>
-            <div class="col-6">
-                <p>UCLA Extension Coding Bootcamp</p>
-                <p>Full Stack Web Development</p>
-            </div>
-            <div class="col-6">
-                <p>University of Arizona</p>
-                <p>B.A. Information Science & eSociety</p>
-            </div>
+            <div class="col-12 text-center">
+                <ul class="list-group list-group-horizontal-xl">
 
-            <h2 class="col-12">Skills</h2>
-            <div class="col-12">
-                <ul class="list-group list-group-horizontal">
                     <li class="list-group-item">HTML</li>
                     <li class="list-group-item">CSS</li>
                     <li class="list-group-item">Javascript</li>
@@ -74,99 +74,117 @@
                     <li class="list-group-item">AJAX</li>
                     <li class="list-group-item">ES6</li>
             </div>
-            <div class="col-12">
-                <ul class="list-group list-group-horizontal">
+
+            <div class="col-12 text-center">
+                <ul class="list-group list-group-horizontal-xl">
+                    <li class="list-group-item">React.js</li>
+                    <li class="list-group-item">SQL</li>
+                    <li class="list-group-item">Express</li>
+                    <li class="list-group-item">MERN Stack</li>
+                    <li class="list-group-item">MongoDB</li>
+                    <li class="list-group-item">Product Management</li>
+                    <li class="list-group-item">PHP</li>
+                    <li class="list-group-item">Github</li>
+                    <li class="list-group-item">Heroku</li>
                     <li class="list-group-item">skill</li>
-                    <li class="list-group-item">skill</li>
-                    <li class="list-group-item">skill</li>
             </div>
-            <h2 class="col-12">Projects</h2>
-            <div class="card mb-3">
-                <div class="row no-gutters">
-                    <div class="col-md-4">
-                        <img src="./assets/NYTS.png" class="card-img" alt="...">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title">The New York Times Article Search</h5>
-                            <p class="card-text"><small class="text-muted">jQuery <span></span> AJAX <span></span> CSS
-                                    <span></span> Bootstrap <span></span></small></p>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
-                            <a class="btn btn-dark"
-                                href="https://github.com/sophiaorlando/New-York-Times-Article-Search" target="_blank"
-                                role="button">
-                                <input type="image"
-                                    src="./assets/gitlogo.png" style="width:20px;height:20px;"/> GitHub</a>
-                                    <a class="btn btn-dark"
-                                href="https://sophiaorlando.github.io/New-York-Times-Article-Search/" target="_blank"
-                                role="button">
-                                <input type="image"
-                                    src="./assets/2uparrow.png" style="width:20px;height:20px;"/> Preview</a>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="card mb-3">
-                <div class="row no-gutters">
-                    <div class="col-md-4">
-                        <img src="./assets/visitorCenterImg.png" class="card-img" alt="...">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title">Visitor Center Search in the U.S.A.</h5>
-                            <p class="card-text"><small class="text-muted">Handlebars <span></span> Javascript <span></span> MySQL<span></span>CSS
-                                    <span></span>API<span></span>  </small></p>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
-                            <a class="btn btn-dark"
-                                href="https://github.com/sophiaorlando/State-Visitor-Centers" target="_blank"
-                                role="button">
-                                <input type="image"
-                                    src="./assets/gitlogo.png" style="width:20px;height:20px;"/> GitHub</a>
-                                    <a class="btn btn-dark"
-                                href="https://young-shore-67722.herokuapp.com/" target="_blank"
-                                role="button">
-                                <input type="image"
-                                    src="./assets/2uparrow.png" style="width:20px;height:20px;"/> Preview</a>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="card mb-3">
-                <div class="row no-gutters">
-                    <div class="col-md-4">
-                        <img src="./assets/beachImg.png" class="card-img" alt="...">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title">California Coastal Beach Cleanups</h5>
-                            <p class="card-text"><small class="text-muted">Javascript <span></span><span></span> MySQL<span></span>  Sequilize <span></span> Moment.js<span></span> 
-                                    <span>Node.js</span>Express<span></span> API<span></span>  </small></p>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
-                            <a class="btn btn-dark"
-                                href="https://github.com/sophiaorlando/Project2" target="_blank"
-                                role="button">
-                                <input type="image"
-                                    src="./assets/gitlogo.png" style="width:20px;height:20px;"/> GitHub</a>
-                                    <a class="btn btn-dark"
-                                href="https://thawing-temple-82462.herokuapp.com/" target="_blank"
-                                role="button">
-                                <input type="image"
-                                    src="./assets/2uparrow.png" style="width:20px;height:20px;"/> Preview</a>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-
         </div>
     </div>
+
+    <div class="projects">
+
+        <h2 class="col-12 text-center headers projHead">Projects</h2>
+
+        <div class="card mb-4 w-75 mx-auto">
+            <div class="row no-gutters">
+                <div class="col-md-4">
+                    <img src="./assets/NYTS.png" class="card-img" alt="...">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">The New York Times Article Search</h5>
+                        <p class="card-text"><small class="text-muted">jQuery <span></span> AJAX <span></span> CSS
+                                <span></span> Bootstrap <span></span></small></p>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This content is a little bit longer.</p>
+                        <a class="btn btn-dark" href="https://github.com/sophiaorlando/New-York-Times-Article-Search"
+                            target="_blank" role="button">
+                            <input type="image" src="./assets/gitlogo.png" style="width:20px;height:20px;" />
+                            GitHub</a>
+                        <a class="btn btn-dark" href="https://sophiaorlando.github.io/New-York-Times-Article-Search/"
+                            target="_blank" role="button">
+                            <input type="image" src="./assets/2uparrow.png" style="width:20px;height:20px;" />
+                            Preview</a>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card mb-4 w-75 mx-auto">
+            <div class="row no-gutters">
+                <div class="col-md-4">
+                    <img src="./assets/visitorCenterImg.png" class="card-img" alt="...">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">Visitor Center Search in the U.S.A.</h5>
+                        <p class="card-text"><small class="text-muted">Handlebars <span></span> Javascript
+                                <span></span> MySQL<span></span>CSS
+                                <span></span>API<span></span> </small></p>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This content is a little bit longer.</p>
+                        <a class="btn btn-dark" href="https://github.com/sophiaorlando/State-Visitor-Centers"
+                            target="_blank" role="button">
+                            <input type="image" src="./assets/gitlogo.png" style="width:20px;height:20px;" />
+                            GitHub</a>
+                        <a class="btn btn-dark" href="https://young-shore-67722.herokuapp.com/" target="_blank"
+                            role="button">
+                            <input type="image" src="./assets/2uparrow.png" style="width:20px;height:20px;" />
+                            Preview</a>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card mb-4 w-75 mx-auto">
+            <div class="row no-gutters">
+                <div class="col-md-4">
+                    <img src="./assets/beachImg.png" class="card-img" alt="...">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">California Coastal Beach Cleanups</h5>
+                        <p class="card-text"><small class="text-muted small">Javascript <span></span><span></span>
+                                MySQL<span></span> Sequilize <span></span> Moment.js<span></span>
+                                <span>Node.js</span>Express<span></span> API<span></span> </small></p>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This content is a little bit longer.</p>
+                        <a class="btn btn-dark" href="https://github.com/sophiaorlando/Project2" target="_blank"
+                            role="button">
+                            <input type="image" src="./assets/gitlogo.png" style="width:20px;height:20px;" />
+                            GitHub</a>
+                        <a class="btn btn-dark" href="https://thawing-temple-82462.herokuapp.com/" target="_blank"
+                            role="button">
+                            <input type="image" src="./assets/2uparrow.png" style="width:20px;height:20px;" />
+                            Preview</a>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    </div>
+    </div>
+
     <footer>
-        <h3>Copyright</h3>
+        <h3>Find Me!</h3>
+        <a class="btn btn-dark" href="https://github.com/sophiaorlando" target="_blank"
+        role="button">
+        <input type="image" src="./assets/gitlogo.png" style="width:40px;height:40px;" /></a>
+        <a class="btn btn-dark" href="contact.html" target="_blank"
+        role="button">
+        <input type="image" src="./assets/emailIcon.png" style="width:40px;height:40px;" /></a>
     </footer>
 </body>
 
