--- a/contact.html
+++ b/contact.html
@@ -11,9 +11,7 @@
 </head>
 
 <body>
-  <button class="btmBtn">
-    <a class="navbar-brand btm" href="index.html">Back to me!</a>
-  </button>
+    <button type="button" class="btn navbar-brand btm btmBtn"><a href="index.html">Back to Me!</a></button>
   <div class="container contact text-center">
     <form>
       <h1>Contact</h1>
