--- a/index.html
+++ b/index.html
@@ -7,30 +7,22 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="stylefun.css"> -->
+
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <title>About Me</title>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand navButt" href="index.html">Back to me!</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-    
-        <div id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link navButt" href="contact.html">Contact <span class="sr-only">(current)</span></a>
-            </li>
-          </ul>
-      </nav>
-   
-        <div class="jumbotron jumbotron-fluid">
+
+    <div id="stargif"></div>
+    <button type="button" class="btn navbar-brand btm btmBtn"><a href="contact.html">Contact Me!</a></button>
+
+        <div class="jumbotron jumbotron-fluid glow">
             <div class="container text-center">
-                <h1 class="display-1">Full Stack Web Developer</h1>
-                <h3 class="display-4">Greater New York Area</h3>
-                <h4 class="display-5"> if (sad() === true) {</br>
+                <h1 class="display-1 gfont">Full Stack Web Developer</h1>
+                <h3 class="display-4 gfont">Greater New York Area</h3>
+                <h4 class="display-5 gfont"> if (sad() === true) {</br>
                     sad().stop();</br>
                     beAwesome();</br>
                     } </h4>
@@ -98,7 +90,7 @@
         <div class="card mb-4 w-75 mx-auto">
             <div class="row no-gutters">
                 <div class="col-md-4">
-                    <img src="./assets/NYTS.png" class="card-img" alt="...">
+                    <img src="./assets/NYTS.png" class="card-img" width="200" height="244" alt="...">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
@@ -123,7 +115,7 @@
         <div class="card mb-4 w-75 mx-auto">
             <div class="row no-gutters">
                 <div class="col-md-4">
-                    <img src="./assets/visitorCenterImg.png" class="card-img" alt="...">
+                    <img src="./assets/visitorCenterImg.png" class="card-img" width="200" height="244" alt="...">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
@@ -149,7 +141,7 @@
         <div class="card mb-4 w-75 mx-auto">
             <div class="row no-gutters">
                 <div class="col-md-4">
-                    <img src="./assets/beachImg.png" class="card-img" alt="...">
+                    <img src="./assets/beachImg.png" class="card-img" width="200" height="244"alt="...">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
