--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <h3 class="display-4 gfont">Greater New York Area</h3>
                 <h4 class="display-5 gfont"> if (sad() === true) {</br>
                     sad().stop();</br>
-                    beAwesome();</br>
+                    <a class="btn" href="indexfun.html" role="button">beAwesome();</a></br>
                     } </h4>
             </div>
         </div>
